Phone number fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="col-xs-12" id="contact">
                 <h1>Jayden Shaw</h1>
                 <div class="info">
-                    <h3><a href="callto:4034811522">403.481.1522</a></h3>
+                    <h3><a href="tel:4034811522">403.481.1522</a></h3>
                     <p><a href="mailto:#"><img src="./gmail.png" alt="jayden.shaw@gmail.com"></a>
                     <a href="https://github.com/jshaw990"><img src="./git.png" alt="https://github.com/jshaw990"></a></p>
                 </div>
